--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,11 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "passport": "^0.7.0",
+    "passport-github": "^1.1.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.2"
   }
 }
