--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,9 +1,23 @@
 {
-    "development": {
-        "username": "root",
-        "password": null,
-        "database": "my_database",
-        "host": "127.0.0.1",
-        "dialect": "postgres"
-    }
+  "development": {
+    "username": "root",
+    "password": null,
+    "database": "toby",
+    "host": "localhost",
+    "dialect": "mysql"
+  },
+  "test": {
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
+  "production": {
+    "username": "root",
+    "password": null,
+    "database": "database_production",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  }
 }
