--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.10.0",
     "passport": "^0.7.0",
-    "passport-github": "^1.1.0"
+    "passport-github": "^1.1.0",
+    "path": "^0.12.7",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
