--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
     "path": "^0.12.7",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   },
