add a user to the db

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,9 @@
 {
   "development": {
-    "username": "postgres",
+    "username": "root",
     "database": "toby",
     "host": "localhost",
-    "port": 5432,
-    "dialect": "postgres"
+    "dialect": "mysql"
   },
   "test": {
     "username": "postgres",
