add main page structure

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
-    "username": "root",
+    "username": "postgres",
     "database": "toby",
     "host": "localhost",
-    "dialect": "mysql"
+    "port": 5432,
+    "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
