--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "method-override": "^3.0.0",
     "mysql2": "^3.10.0",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
