--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
