--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
     "passport": "^0.7.0",
@@ -25,6 +26,7 @@
     "path": "^0.12.7",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "rotating-file-stream": "^3.2.1",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   },
