add docker config

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "root",
+    "username": "admin",
     "database": "toby",
     "host": "localhost",
     "dialect": "mysql"
