display buttons based on role

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,9 +1,11 @@
 {
   "development": {
-    "username": "admin",
+    "username": "postgres",
     "database": "toby",
-    "host": "localhost",
-    "dialect": "mysql"
+    "host": "postgres",
+    "password": "password",
+    "port": 5432,
+    "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
